--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,6 +4,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fantasque+Sans+Mono:wght@400;700&display=swap');
 
 :root {
-  --ifm-font-family-base: 'Google Sans', 'EB Garamond', 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  --ifm-font-family-base: '', 'EB Garamond', 'Google Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
   --ifm-font-family-monospace: 'Menlo', 'Fantasque Sans Mono', 'Monaco', 'Courier New', 'Consolas', monospace;
 }
