--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fantasque+Sans+Mono:wght@400;700&display=swap');
 
 :root {
   --ifm-font-family-base: '', 'EB Garamond', 'Google Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-  --ifm-font-family-monospace: 'Menlo', 'Fantasque Sans Mono', 'Monaco', 'Courier New', 'Consolas', monospace;
+  --ifm-font-family-monospace: 'Menlo', 'Monaco', 'Courier New', 'Consolas', monospace;
 }
