--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,7 +4,7 @@
 
 :root {
   --ifm-font-family-base:
-    '', 'EB Garamond', 'Google Sans', -apple-system, BlinkMacSystemFont,
+    'Google Sans', 'EB Garamond', -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
   --ifm-font-family-monospace:
     'Fantasque Sans Mono', 'Menlo', 'Monaco', 'Courier New', 'Consolas',
