--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -3,10 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
 
 :root {
-  --ifm-font-family-base:
-    '', 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, sans-serif;
-  --ifm-font-family-monospace:
-    'Fantasque Sans Mono', 'Menlo', 'Monaco', 'Courier New', 'Consolas',
-    monospace;
+  --ifm-font-family-base: 'EB Garamond', -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  --ifm-font-family-monospace: 'Fantasque Sans Mono', 'Menlo', 'Monaco',
+    'Courier New', 'Consolas', monospace;
+}
+
+html {
+  font-size: 110%;
 }
