--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,18 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
 
 :root {
   --ifm-font-family-base:
-    'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, sans-serif;
+    'Baloo 2', 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, 'Helvetica Neue', Arial, sans-serif;
   --ifm-font-family-monospace:
     'Fantasque Sans Mono', 'Menlo', 'Monaco', 'Courier New', 'Consolas',
     monospace;
 }
 
 html {
-  font-size: 110%;
+  font-size: 105%;
 }
 
 /* Fix for medium-zoom image being covered by navbar */
