--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -3,6 +3,42 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
 
+@font-face {
+  font-family: 'Fantasque Sans Mono';
+  src: url('/fonts/fantasque-sans-mono/FantasqueSansMNerdFontMono-Regular.ttf')
+    format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Fantasque Sans Mono';
+  src: url('/fonts/fantasque-sans-mono/FantasqueSansMNerdFontMono-Bold.ttf')
+    format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Fantasque Sans Mono';
+  src: url('/fonts/fantasque-sans-mono/FantasqueSansMNerdFontMono-Italic.ttf')
+    format('truetype');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Fantasque Sans Mono';
+  src: url('/fonts/fantasque-sans-mono/FantasqueSansMNerdFontMono-BoldItalic.ttf')
+    format('truetype');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
 :root {
   --ifm-font-family-base:
     'Baloo 2', 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI',
