--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,7 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
 
 @font-face {
   font-family: 'Fantasque Sans Mono';
@@ -40,9 +37,7 @@
 }
 
 :root {
-  --ifm-font-family-base:
-    'Baloo 2', 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, 'Helvetica Neue', Arial, sans-serif;
+  --ifm-font-family-base: 'EB Garamond', sans-serif;
   --ifm-font-family-monospace:
     'Fantasque Sans Mono', 'Menlo', 'Monaco', 'Courier New', 'Consolas',
     monospace;
