--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,50 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ysabeau+Infant:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans+Code:wght@400..700&display=swap');
 
-@font-face {
-  font-family: 'Fantasque Sans Mono';
-  src: url('/fonts/fantasque-sans-mono/FantasqueSansMNerdFontMono-Regular.ttf')
-    format('truetype');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fantasque Sans Mono';
-  src: url('/fonts/fantasque-sans-mono/FantasqueSansMNerdFontMono-Bold.ttf')
-    format('truetype');
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fantasque Sans Mono';
-  src: url('/fonts/fantasque-sans-mono/FantasqueSansMNerdFontMono-Italic.ttf')
-    format('truetype');
-  font-weight: 400;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fantasque Sans Mono';
-  src: url('/fonts/fantasque-sans-mono/FantasqueSansMNerdFontMono-BoldItalic.ttf')
-    format('truetype');
-  font-weight: 700;
-  font-style: italic;
-  font-display: swap;
-}
+/* Fallback imports if Ysabeau Infant is not available */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100..800&display=swap');
 
 :root {
-  --ifm-font-family-base: 'EB Garamond', sans-serif;
+  --ifm-font-family-base:
+    'Ysabeau Infant', 'Inter', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
   --ifm-font-family-monospace:
-    'Fantasque Sans Mono', 'Menlo', 'Monaco', 'Courier New', 'Consolas',
-    monospace;
-}
-
-html {
-  font-size: 105%;
+    'Google Sans Code', 'JetBrains Mono', 'Fira Code', 'Menlo', 'Monaco',
+    'Courier New', 'Consolas', monospace;
 }
 
 /* Fix for medium-zoom image being covered by navbar */
