--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,7 +23,8 @@
 
 /* Custom Code Block Styles */
 :root {
-  --ifm-code-font-size: 85%;
+  --ifm-font-size-base: 108%;
+  --ifm-code-font-size: 80%;
 }
 
 /* Force no italics in code blocks */
